--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
     {
-        "version": "R0.0.1",
-        "updated_at": "2024-01-12 23:01:15",
+        "version": "R1.0",
+        "updated_at": "03.02.2024",
         "url": "https://github.com/JudeDM/binder/archive/refs/tags/R1.0.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/R1.0.json"
     }
