--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         "version": "R1.0",
         "updated_at": "03.02.2024",
         "url": "https://github.com/JudeDM/binder/archive/refs/tags/R1.0.zip",
-        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/R1.0.json"
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/R1.0.txt"
     }
 ]
