--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [
     {
-        "version": "R1.0",
-        "updated_at": "03.02.2024",
-        "url": "https://github.com/JudeDM/binder/releases/download/R1.0/binder.zip",
-        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/R1.0.txt"
+        "version": "B1.0",
+        "updated_at": "04.02.2024 16:00:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.0/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.0.txt"
     }
 ]
