--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
         "updated_at": "04.02.2024 16:00:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.0/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.0.txt"
+    },
+    {
+        "version": "B1.1",
+        "updated_at": "05.02.2024 22:00:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.1/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.1.txt"
     }
 ]
