--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
         "updated_at": "05.02.2024 22:00:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.1/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.1.txt"
+    },
+    {
+        "version": "B1.2",
+        "updated_at": "06.02.2024 11:35:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.2/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.2.txt"
     }
 ]
