--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
         "updated_at": "06.02.2024 11:35:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.2/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.2.txt"
+    },
+    {
+        "version": "B1.3",
+        "updated_at": "10.02.2024 13:30:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.3/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.txt"
     }
 ]
