--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
         "updated_at": "10.02.2024 13:30:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.3/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.txt"
-    }
+    },
+    {
+        "version": "B1.3.1",
+        "updated_at": "29.02.2024 19:50:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.3.1/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.1.txt"
+    },
 ]
