--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
         "updated_at": "29.02.2024 19:50:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.3.1/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.1.txt"
+    },
+    {
+        "version": "B1.3.2",
+        "updated_at": "07.03.2024 17:40:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.3.2/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.2.txt"
     }
 ]
