--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
         "updated_at": "07.03.2024 17:40:00",
         "url": "https://github.com/JudeDM/binder/releases/download/B1.3.2/binder.zip",
         "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.2.txt"
+    },
+    {
+        "version": "B1.3.3",
+        "updated_at": "12.03.2024 16:12:00",
+        "url": "https://github.com/JudeDM/binder/releases/download/B1.3.3/binder.zip",
+        "issues": "https://github.com/JudeDM/judedm.github.io/blob/main/issues/B1.3.3.txt"
     }
 ]
